{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "f4a86781-01dc-cd62-ed01-d654453e0ae5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-Terraform-ec2-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073e3b46f8802d31b",
            "arn": "arn:aws:ec2:us-east-1:891377328816:instance/i-048545d9eedd7020d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-048545d9eedd7020d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My-Terraform-ec2-windows-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "btY0VE8i6M9g+NHxd/cDJCr+5pW0wK4zP/zIIXtPLaW473QIxY6MpdXapB1JH8eND9r50H53SIHlHcxJyZDWGugx75dPX/t6FxIJcLAAOyQ4Ue/5dPG+n9MUWhk7tsnrImjUhTCaK6V+zDIeFYy2JRYg1e/7Nxy9T66kCA20O2tLEf4Nlk5t7V2GRYYt6roqkxXEXmHLLIxV73bNUP0iy336ISJg2CruA1iCrwJVv/CRglEjSFOaqa73blMi5GCGIoRd7jiW2R2KcP38VZfveBsZ9+2Br4DqdHxDF6wAz9ikmhRwlqzgJxreqrsuaAoaD2UB8LHuz5nOpWM6OGjRWfk8r+kEmspiMNEkAqd6x2eTEV/UQmjDR3xEWIaqJ8Uo18k4+Qwe4nOXNV3/2CtRLcXV/dwj0I59jk95FMjoJ6cf8GvtLLcXWkiMg9/++cGgX5TGU5vksdzypGo/BjCYLM [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08dda2bee5a7c6508",
            "private_dns": "ip-10-0-69-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.69.67",
            "public_dns": "ec2-54-166-226-234.compute-1.amazonaws.com",
            "public_ip": "54.166.226.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08348a69e1547c94c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f21edb0824af4704",
            "tags": {
              "Name": "My-Terraform-ec2-windows"
            },
            "tags_all": {
              "Name": "My-Terraform-ec2-windows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f014268a80de23a6"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-windows-SG",
            "data.aws_ami.windows-2019",
            "data.http.my_public_ip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-windows-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:security-group/sg-0f014268a80de23a6",
            "description": "Terraform Security Group for Windows EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f014268a80de23a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.222.56.74/32"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "18.222.56.74/32"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "18.222.56.74/32"
                ],
                "description": "Allow incoming RDP connections",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "18.222.56.74/32"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform-ec2-windows-SG",
            "name_prefix": "",
            "owner_id": "891377328816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-ec2-windows-SG"
            },
            "tags_all": {
              "Name": "Terraform-ec2-windows-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.my_public_ip",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:network-acl/acl-088591bafea581a77",
            "default_network_acl_id": "acl-088591bafea581a77",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-088591bafea581a77",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891377328816",
            "subnet_ids": [
              "subnet-0213422c868361404",
              "subnet-0457c5a6c6e3a379c",
              "subnet-0f21edb0824af4704",
              "subnet-0fb85540795a0c86f"
            ],
            "tags": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:route-table/rtb-0f83c49a0a5634187",
            "default_route_table_id": "rtb-0f83c49a0a5634187",
            "id": "rtb-0f83c49a0a5634187",
            "owner_id": "891377328816",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:security-group/sg-0c538af865e6b0a8f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c538af865e6b0a8f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377328816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-default"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1279b9f811ecdfe",
            "arn": "arn:aws:ec2:us-east-1:891377328816:elastic-ip/eipalloc-0c1279b9f811ecdfe",
            "domain": "vpc",
            "id": "eipalloc-0c1279b9f811ecdfe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-55-215-68.compute-1.amazonaws.com",
            "public_ip": "52.55.215.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project-Terraform-windows-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:internet-gateway/igw-0fbdac54c92d858a2",
            "id": "igw-0fbdac54c92d858a2",
            "owner_id": "891377328816",
            "tags": {
              "Name": "project-Terraform-windows-vpc"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1279b9f811ecdfe",
            "association_id": "eipassoc-033427bf109eca803",
            "connectivity_type": "public",
            "id": "nat-09f8ab154e0fc4128",
            "network_interface_id": "eni-0cd9144cdc0aae44b",
            "private_ip": "10.0.71.40",
            "public_ip": "52.55.215.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f21edb0824af4704",
            "tags": {
              "Name": "project-Terraform-windows-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063b5f6225c64843a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f8ab154e0fc4128",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063b5f6225c64843a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fbdac54c92d858a2",
            "id": "r-rtb-09f357dc8cffd65291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f357dc8cffd6529",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:route-table/rtb-063b5f6225c64843a",
            "id": "rtb-063b5f6225c64843a",
            "owner_id": "891377328816",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-Terraform-windows-vpc-private"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:route-table/rtb-09f357dc8cffd6529",
            "id": "rtb-09f357dc8cffd6529",
            "owner_id": "891377328816",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-Terraform-windows-vpc-public"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0974072baeaa10b30",
            "route_table_id": "rtb-063b5f6225c64843a",
            "subnet_id": "subnet-0fb85540795a0c86f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bce6a803cd4c493",
            "route_table_id": "rtb-063b5f6225c64843a",
            "subnet_id": "subnet-0457c5a6c6e3a379c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2e053147b5d5c9a",
            "route_table_id": "rtb-09f357dc8cffd6529",
            "subnet_id": "subnet-0f21edb0824af4704"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d421e1b288a05c8",
            "route_table_id": "rtb-09f357dc8cffd6529",
            "subnet_id": "subnet-0213422c868361404"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:subnet/subnet-0fb85540795a0c86f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb85540795a0c86f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377328816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnets"
            },
            "tags_all": {
              "Name": "private-subnets"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:subnet/subnet-0457c5a6c6e3a379c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0457c5a6c6e3a379c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377328816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnets"
            },
            "tags_all": {
              "Name": "private-subnets"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:subnet/subnet-0f21edb0824af4704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f21edb0824af4704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377328816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnets"
            },
            "tags_all": {
              "Name": "public-subnets"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:subnet/subnet-0213422c868361404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0213422c868361404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377328816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnets"
            },
            "tags_all": {
              "Name": "public-subnets"
            },
            "vpc_id": "vpc-0ca34cb5e035228b2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377328816:vpc/vpc-0ca34cb5e035228b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088591bafea581a77",
            "default_route_table_id": "rtb-0f83c49a0a5634187",
            "default_security_group_id": "sg-0c538af865e6b0a8f",
            "dhcp_options_id": "dopt-088ccc6662862e84c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca34cb5e035228b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f83c49a0a5634187",
            "owner_id": "891377328816",
            "tags": {
              "Name": "project-Terraform-windows-vpc"
            },
            "tags_all": {
              "Name": "project-Terraform-windows-vpc"
            }
          }
        }
      ]
    }
  ]
}